--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -30,6 +30,9 @@
 			<div class="col-left"><p>Updated: </p></div>
 			<div class="col-right"><p id="updated"></p></div>
 		</div>
+		<div class="row last">
+			<div class="col-left"><a href="https://www.coingecko.com" target="_blank">Powered by CoinGecko</a></div>
+		</div>
 	</div>
 	<script type="text/javascript" async="" src="/js/main.js"></script>
 </body>
