--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -31,6 +31,7 @@
 			<div class="col-right"><p id="updated"></p></div>
 		</div>
 	</div>
+	<canvas id="beproChart" width="200" height="200"></canvas>
 	<div id="otherBags">
 		<div class="row">
 			<div class="col-left"><h1>other bags</h1></div>
@@ -50,6 +51,7 @@
 			<div class="col-left"><a href="https://www.coingecko.com" target="_blank">Powered by CoinGecko</a></div>
 		</div>
 	</div>
+	<script type="text/javascript" async="" src="/js/chart.min.js"></script>
 	<script type="text/javascript" async="" src="/js/main.js"></script>
 </body>
 </html>
